[package]
name = "retrieveimage_rust_lambda"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_runtime = "0.10.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.68"
lambda_http = "0.3.0"
aws_lambda_events = "0.15.0"
log = "0.4.14"
env_logger = "0.9.0"
aws_lambda = "0.3.0"
rusoto_core = "0.46.0"
rusoto_dynamodb = "0.46.0"
rusoto_xray = "0.46.0"